Buoi 3: Delete & Search

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,33 @@
 <p class="login-title">List user</p>
 
+<div>
+  <input type="text" placeholder="Search" (input)="onSearch($event)">
+</div>
+
+<div class="container col-6">
+  <form>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" id="name" class="form-control" />
+    </div>
+    <div class="form-group">
+      <label for="age">Age</label>
+      <input type="number" id="age" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="phone">Phone</label>
+      <input type="text" id="phone" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="avatarUrl">Avatar url</label>
+      <input type="text" id="avatarUrl" class="form-control">
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  </form>
+</div>
+
 <div class="container">
   <table class="table">
     <thead>
@@ -12,7 +40,7 @@
     </thead>
     <tbody>
 
-      <tr *ngFor="let item of users">
+      <tr *ngFor="let item of usersFilter">
         <td>{{item.id}}</td>
         <td>{{item.name}}</td>
         <td>{{item.age}}</td>
@@ -21,7 +49,10 @@
           <img height="100" src="{{item.avatar}}" alt="">
           <img height="100" [src]="item.avatar" alt="">
         </td>
-        <td><button class="btn btn-danger">Delete</button></td>
+        <td><button
+          class="btn btn-danger"
+          (click)="remove(item.id)"
+          >Delete</button></td>
       </tr>
 
     </tbody>
