--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <p>App work!</p>
-<app-login></app-login>
-<app-user></app-user>
+<!-- <app-login></app-login>
+<app-user></app-user> -->
+<app-product></app-product>
