--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,23 @@
 <p>App work!</p>
 <!-- <app-login></app-login>
 <app-user></app-user> -->
-<app-product></app-product>
+<!-- <app-product></app-product> -->
+
+<div>
+  <header>
+    HEADER
+  </header>
+  <nav>
+    <ul>
+      <li><a routerLink="/product">Product</a></li>
+      <li><a routerLink="/user">User</a></li>
+      <li><a routerLink="/login">Login</a></li>
+    </ul>
+  </nav>
+  <aside>
+    ASIDE
+  </aside>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
