--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <header>
     <ul>
       <li><a routerLink="/product">Product</a></li>
+      <li><a routerLink="/app">Product</a></li>
       <li><a routerLink="/student">Student</a></li>
     </ul>
   </header>
