--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -39,6 +39,13 @@
       </form>
     </div> -->
     <div class="col-md-12">
+      <a routerLink="/product/create">
+        <button class="btn btn-primary">
+          Tạo mới
+        </button>
+      </a>
+    </div>
+    <div class="col-md-12">
       <table class="table table-hover">
         <thead><tr>
           <td>ID</td>
