--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -2,5 +2,5 @@
 <p>{{showProduct | json}}</p>
 <h1>Chi tiết sản phẩm</h1>
 <p>Tên sản phẩm: {{showProduct?.name}}</p>
-<p>Mô tả: </p>
-<p>Giá sản phẩm: </p>
+<p>Mô tả: {{showProduct?.description}} </p>
+<p>Giá sản phẩm: {{showProduct?.price}}</p>
