Create & Update & validate with API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
       <li><a routerLink="/product">Product</a></li>
       <li><a routerLink="/user">User</a></li>
       <li><a routerLink="/login">Login</a></li>
+      <li><a routerLink="/students">Student</a></li>
     </ul>
   </nav>
   <aside>
