--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,6 +1,8 @@
 <p>student works!</p>
 <p>{{students | json}}</p>
 
+<a routerLink="/students/form" class="btn btn-primary">Create</a>
+
 <table class="table table-hover">
   <thead>
     <tr>
@@ -19,6 +21,10 @@
         <a routerLink="/students/{{student.id}}">
           <button class="btn btn-primary">Detail</button>
         </a>
+        <a
+          routerLink="/students/form/{{student.id}}"
+          class="btn btn-warning"
+        >Edit</a>
         <button (click)="onDelete(student.id)" class="btn btn-danger">Delete</button>
       </td>
     </tr>
