Reactive form & child component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <li><a routerLink="/product">Product</a></li>
       <li><a routerLink="/app">Product</a></li>
       <li><a routerLink="/student">Student</a></li>
+      <li><a routerLink="/register">Register</a></li>
     </ul>
   </header>
   <aside>
