--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
       <li><a routerLink="/user">User</a></li>
       <li><a routerLink="/login">Login</a></li>
       <li><a routerLink="/students">Student</a></li>
+      <li><a routerLink="/posts">Post</a></li>
     </ul>
   </nav>
   <aside>
