--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -57,9 +57,20 @@
         <tbody>
           <tr *ngFor="let product of products">
             <td>{{product.id}}</td>
-            <td>{{product.name}}</td>
+            <!-- <td>{{product.name}}</td> -->
+            <td>
+              <app-product-name
+                [name]="product.name"
+              ></app-product-name>
+            </td>
+
             <td>{{product.price}}</td>
-            <td>{{product.desc}}</td>
+            <!-- <td>{{product.desc}}</td> -->
+            <td>
+              <app-product-name
+                [name]="product.desc"
+              ></app-product-name>
+            </td>
             <td>
               <a [routerLink]="['/product', product.id]">
                 <button class="btn btn-primary">Xem chi tiet</button>
