--- a/src/app/post-form/post-form.component.html
+++ b/src/app/post-form/post-form.component.html
@@ -5,26 +5,19 @@
     <div class="form-group">
       <label for="title">Title</label>
       <input type="text" formControlName="title" class="form-control">
-
-      <div *ngIf="postForm.get('title')?.dirty" class="text-danger">
-        <p *ngIf="postForm.get('title')?.errors?.['required']">
-          Tiêu đề bắt buộc nhập
-        </p>
-      </div>
+      <app-show-error
+        formField="abc"
+        key="Tiêu đề"
+      ></app-show-error>
     </div>
     <div class="form-group">
       <label for="content">Content</label>
       <textarea formControlName="content" class="form-control">
       </textarea>
-
-      <div *ngIf="postForm.get('content')?.dirty" class="text-danger">
-        <p *ngIf="postForm.get('content')?.errors?.['required']">
-          Nội dung bắt buộc nhập
-        </p>
-        <p *ngIf="postForm.get('content')?.errors?.['minlength']">
-          Nội dung tối thiểu 6 ký tự
-        </p>
-      </div>
+      <app-show-error
+        [formField]="postForm.get('content')"
+        key="Nội dung"
+      ></app-show-error>
     </div>
     <div class="form-group">
       <label for="status">Status</label>
