--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -9,6 +9,7 @@
       <th>ID</th>
       <th>Name</th>
       <th>Class</th>
+      <th>Status</th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -17,6 +18,10 @@
       <td>{{student.id}}</td>
       <td>{{student.name}}</td>
       <td>{{student.class}}</td>
+      <td><app-status-btn
+        [status]="student.status"
+        (changeStatus)="parentChangeStatus($event, student)"
+      ></app-status-btn></td>
       <td>
         <a routerLink="/students/{{student.id}}">
           <button class="btn btn-primary">Detail</button>
