Layout CLIENT & ADMIN

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,5 +1,5 @@
 <p>product-detail works!</p>
-
+<a routerLink="../form">Product form</a>
 <h1>Chi tiết sản phẩm {{productDetail.name}}</h1>
 <p>ID: {{productDetail.id}}</p>
 <p>Mô tả: {{productDetail.desc}}</p>
