--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -66,9 +66,7 @@
             </td>
             <td>{{product.price}}</td>
             <td>
-              <app-product-name
-                [name]="product.desc"
-              ></app-product-name>
+              <img [src]="product.image" alt="">
             </td>
             <!-- <td>{{product.status}}</td> -->
             <td>
