--- a/src/app/layouts/admin/admin.component.html
+++ b/src/app/layouts/admin/admin.component.html
@@ -74,18 +74,7 @@
     </section>
 
     <!-- Main content -->
-    <section class="content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <!-- Default box -->
-            <router-outlet></router-outlet>
-
-            <!-- /.card -->
-          </div>
-        </div>
-      </div>
-    </section>
+    <app-admin-content></app-admin-content>
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
