--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,7 +1,7 @@
 <p>student works!</p>
 <p>{{students | json}}</p>
 
-<a routerLink="/students/form" class="btn btn-primary">Create</a>
+<a routerLink="/admin/student/form" class="btn btn-primary">Create</a>
 
 <table class="table table-hover">
   <thead>
@@ -9,6 +9,7 @@
       <th>ID</th>
       <th>Name</th>
       <th>Class</th>
+      <th>Avatar</th>
       <th>Status</th>
       <th>Actions</th>
     </tr>
@@ -18,6 +19,7 @@
       <td>{{student.id}}</td>
       <td>{{student.name}}</td>
       <td>{{student.class}}</td>
+      <td><img [src]="student.avatar" width="100" alt=""></td>
       <td><app-status-btn
         [status]="student.status"
         (changeStatus)="parentChangeStatus($event, student)"
