--- a/demo_assignment_1/components/header.html
+++ b/demo_assignment_1/components/header.html
@@ -13,6 +13,7 @@
 
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <a class="me-3 py-2 text-dark text-decoration-none" href="#!/">Home</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="#!/products">Product</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="#!/about">About</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="#">Support</a>
             <a class="py-2 text-dark text-decoration-none" href="#">Pricing</a>
