--- a/angularjs-router/components/customHeader.html
+++ b/angularjs-router/components/customHeader.html
@@ -1,5 +1,5 @@
 <header>HEADER 1231231</header>
 <nav>
     <a href="#!/">Trang chủ</a>
-    <a href="#!/about">Liên hệ</a>
+    <a href="#!/ds-nguoi-dung">DS người dùng</a>
 </nav>
